--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-helpers",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A util package to use Vue 2 with Composition API easily",
   "author": "Ambit Tsai <ambit_tsai@qq.com>",
   "license": "Apache-2.0",
@@ -27,6 +27,7 @@
     "rollup": "^2.53.3",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.3.5",
+    "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
