--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "vue2-helpers",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "A util package to use Vue 2 with Composition API easily",
-  "author": "Ambit Tsai <ambit_tsai@qq.com>",
+  "author": {
+    "name": "Ambit Tsai",
+    "email": "ambit_tsai@qq.com"
+  },
   "license": "Apache-2.0",
   "main": "index.js",
   "scripts": {
@@ -20,6 +23,11 @@
     "@vue/composition-api": "^1",
     "vue-router": "^3",
     "vuex": "^3"
+  },
+  "peerDependenciesMeta": {
+    "vuex": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.3",
