--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-helpers",
-  "version": "1.1.6",
+  "version": "2.0.0",
   "description": "A util package to use Vue 2 with Composition API easily",
   "author": {
     "name": "Ambit Tsai",
@@ -19,8 +19,10 @@
   "bugs": {
     "url": "https://github.com/ambit-tsai/vue2-helpers/issues"
   },
+  "dependencies": {
+    "vue": "~2.7.7"
+  },
   "peerDependencies": {
-    "@vue/composition-api": "^1",
     "vue-router": "^3",
     "vuex": "^3"
   },
@@ -30,13 +32,11 @@
     }
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.2.3",
-    "@vue/composition-api": "^1.0.4",
-    "rollup": "^2.53.3",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "rollup": "^2.77.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.3.5",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.2",
+    "typescript": "^4.7.4",
+    "vue-router": "^3.5.4",
     "vuex": "^3.6.2"
   },
   "keywords": [
