--- a/package.json
+++ b/package.json
@@ -19,24 +19,28 @@
   "bugs": {
     "url": "https://github.com/ambit-tsai/vue2-helpers/issues"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@vue/composition-api": "^1",
+    "vue": ">= 2.5 < 2.7"
+  },
+  "peerDependencies": {
     "vue-router": "^3",
     "vuex": "^3"
   },
   "peerDependenciesMeta": {
+    "vue-router": {
+      "optional": true
+    },
     "vuex": {
       "optional": true
     }
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.2.3",
-    "@vue/composition-api": "^1.0.4",
-    "rollup": "^2.53.3",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "rollup": "^2.77.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.3.5",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.2",
+    "typescript": "^4.7.4",
+    "vue-router": "^3.5.4",
     "vuex": "^3.6.2"
   },
   "keywords": [
